Specific material cause bad render result, different on CPU/GPU #41023

Closed
opened 2014-07-10 20:19:55 +02:00 by Borek Bures · 8 comments

System Information
Operating system and graphics card
Win7 64bit, nVidia GTX 780

Blender Version
Broken: 2.71_9337574, and last build 2.71.1_83f5d41
Worked: 2.70_19e627c

Short description of error
Specific material causes bad render result, different in viewport and different on GPU/CPU. setting1.jpg
Working in Blender 2.70 CPU/GPU: setting1_cpu_blender270.jpg setting1_gpu_blender270.jpg
Blender 2.71 - rendering on CPU/GPU: setting1_cpu_blender271.jpg setting1_gpu_blender271.jpg
Blender 2.71.1 - rendering on CPU/GPU/CPU_viewport/GPU_viewport setting1_cpu_blender2711.jpg setting1_gpu_blender2711.jpg setting1_cpu_blender2711_viewport.jpg setting1_gpu_blender2711_viewport.jpg

Using single texture node for two color inputs gives different error than using two nodes with the same texture data for the inputs.setting2.jpg
Blender 2.71.1 - rendering on CPU/GPU setting2_cpu_blender2711.jpg setting2_gpu_blender2711.jpg

Blend file:
bug.blend

**System Information** Operating system and graphics card Win7 64bit, nVidia GTX 780 **Blender Version** Broken: 2.71_9337574, and last build 2.71.1_83f5d41 Worked: 2.70_19e627c **Short description of error** Specific material causes bad render result, different in viewport and different on GPU/CPU. ![setting1.jpg](https://archive.blender.org/developer/F97352/setting1.jpg) Working in Blender 2.70 CPU/GPU: ![setting1_cpu_blender270.jpg](https://archive.blender.org/developer/F97354/setting1_cpu_blender270.jpg) ![setting1_gpu_blender270.jpg](https://archive.blender.org/developer/F97358/setting1_gpu_blender270.jpg) Blender 2.71 - rendering on CPU/GPU: ![setting1_cpu_blender271.jpg](https://archive.blender.org/developer/F97356/setting1_cpu_blender271.jpg) ![setting1_gpu_blender271.jpg](https://archive.blender.org/developer/F97360/setting1_gpu_blender271.jpg) Blender 2.71.1 - rendering on CPU/GPU/CPU_viewport/GPU_viewport ![setting1_cpu_blender2711.jpg](https://archive.blender.org/developer/F97367/setting1_cpu_blender2711.jpg) ![setting1_gpu_blender2711.jpg](https://archive.blender.org/developer/F97368/setting1_gpu_blender2711.jpg) ![setting1_cpu_blender2711_viewport.jpg](https://archive.blender.org/developer/F97371/setting1_cpu_blender2711_viewport.jpg) ![setting1_gpu_blender2711_viewport.jpg](https://archive.blender.org/developer/F97373/setting1_gpu_blender2711_viewport.jpg) Using single texture node for two color inputs gives different error than using two nodes with the same texture data for the inputs.![setting2.jpg](https://archive.blender.org/developer/F97375/setting2.jpg) Blender 2.71.1 - rendering on CPU/GPU ![setting2_cpu_blender2711.jpg](https://archive.blender.org/developer/F97377/setting2_cpu_blender2711.jpg) ![setting2_gpu_blender2711.jpg](https://archive.blender.org/developer/F97379/setting2_gpu_blender2711.jpg) Blend file: [bug.blend](https://archive.blender.org/developer/F97381/bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BorekBures

Added subscriber: @BorekBures

Added subscriber: @mont29

Added subscriber: @mont29
Sergey Sharybin self-assigned this 2014-07-10 22:01:40 +02:00

Would have a closer look tomorrow.

Would have a closer look tomorrow.

This issue was referenced by 594ff72bfe

This issue was referenced by 594ff72bfe597b42bfc11e062649176fec00be0c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 594ff72bfe.

Closed by commit 594ff72bfe.

This issue was referenced by 71499421915f3c2a7f300510142e7894a0b00090

This issue was referenced by 71499421915f3c2a7f300510142e7894a0b00090
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41023
No description provided.