Fix T41023: Specific material cause bad render result, different on CPU/GPU

Issue was caused by too much aggressive optimization, which skipped execution
of some nodes leading to an uninitialized memory read in SVM stack.